--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                     </div>
                     <div class="flex space-x-6">
                         <a href="https://vk.com/fresh_player" class="text-zinc-400 hover:text-white transition-colors">VK</a>
-                        <a href="" class="text-zinc-400 hover:text-white transition-colors">TG</a>
-                        <a href="https://www.github.com/themrsami" class="text-zinc-400 hover:text-white transition-colors">GitHub</a>
+                        <a href="t.me/@South_Kartman" class="text-zinc-400 hover:text-white transition-colors">TG</a>
+                        <a href="https://github.com/SouthKartman" class="text-zinc-400 hover:text-white transition-colors">GitHub</a>
                     </div>
                 </div>
                 <div class="mt-8 text-center text-zinc-400 text-sm">
@@ -468,4 +468,5 @@
     <script src="https://cdn.tailwindcss.com/"></script>
 </div>
 </body>
+
 </html>
