--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                     <div class="flex space-x-6">
                         <a href="https://vk.com/fresh_player" class="text-zinc-400 hover:text-white transition-colors">VK</a>
                         <a href="https://github.com/SouthKartman" class="text-zinc-400 hover:text-white transition-colors">GitHub</a>
+                        <a href="t.me/South_Kartman" class="text-zinc-400 hover:text-white transition-colors">TG</a>
                     </div>
                 </div>
                 <div class="mt-8 text-center text-zinc-400 text-sm">
@@ -467,3 +468,4 @@
 </div>
 </body>
 </html>
+
