--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <span class="block h-0.5 w-0 group-hover:w-full transition-all duration-500 bg-[#ff6b6b]"></span>
                             </a> -->
                             <button class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
-                                <span class="relative text-black font-medium">Связатся</span>
+                                <a link="t.me/South_Kartman"><span class="relative text-black font-medium">Связатся</span></a>
                             </button>
                         </div>
                     </div>
@@ -468,4 +468,5 @@
 </div>
 </body>
 </html>
+
 
