new update meow

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                                 Contact
                                 <span class="block h-0.5 w-0 group-hover:w-full transition-all duration-500 bg-[#ff6b6b]"></span>
                             </a> -->
-                            <button class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
-                                <a link="t.me/South_Kartman"><span class="relative text-black font-medium">Связатся</span></a>
-                            </button>
+                            <a link="t.me/South_Kartman" class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
+                                <span class="relative text-black font-medium">Связатся</span>
+                            </a>
                         </div>
                     </div>
 
@@ -468,5 +468,6 @@
 </div>
 </body>
 </html>
+
 
 
