--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 Contact
                                 <span class="block h-0.5 w-0 group-hover:w-full transition-all duration-500 bg-[#ff6b6b]"></span>
                             </a> -->
-                            <a link="t.me/South_Kartman" class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
+                            <a href="https://t.me/South_Kartman" class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
                                 <span class="relative text-black font-medium">Связатся</span>
                             </a>
                         </div>
@@ -454,7 +454,7 @@
                     <div class="flex space-x-6">
                         <a href="https://vk.com/fresh_player" class="text-zinc-400 hover:text-white transition-colors">VK</a>
                         <a href="https://github.com/SouthKartman" class="text-zinc-400 hover:text-white transition-colors">GitHub</a>
-                        <a href="t.me/South_Kartman" class="text-zinc-400 hover:text-white transition-colors">TG</a>
+                        <a href="https://t.me/South_Kartman" class="text-zinc-400 hover:text-white transition-colors">TG</a>
                     </div>
                 </div>
                 <div class="mt-8 text-center text-zinc-400 text-sm">
@@ -468,6 +468,7 @@
 </div>
 </body>
 </html>
+
 
 
 
