--- a/index.html
+++ b/index.html
@@ -464,10 +464,11 @@
         </footer>
     </div>
     <script src="./script.js"></script>
-    <script src="https://cdn.tailwindcss.com/"></script>
+    <script src="./tailwind.js"></script>
 </div>
 </body>
 </html>
+
 
 
 
