исправление синтаксической ошибки

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <span class="block h-0.5 w-0 group-hover:w-full transition-all duration-500 bg-[#ff6b6b]"></span>
                             </a> -->
                             <a href="https://t.me/South_Kartman" class="relative px-6 py-2 overflow-hidden group bg-gradient-to-r from-[#ff6b6b] to-[#ffd93d] rounded-lg">
-                                <span class="relative text-black font-medium">Связатся</span>
+                                <span class="relative text-black font-medium">Связаться</span>
                             </a>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                         <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/90 z-10"></div>
                         <div class="absolute bottom-8 left-8 z-20">
                             <h3 class="text-2xl font-bold mb-2">Социальная сеть</h3>
-                            <p class="text-zinc-400 mb-4">Веб-разарботка</p>
+                            <p class="text-zinc-400 mb-4">Веб-разработка</p>
                             <a href="https://github.com/SouthKartman/WWSV2" class="inline-flex items-center space-x-2 text-[#ff6b6b] group-hover:text-white transition-colors duration-300">
                                 <span>Посмотреть кейс</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -265,7 +265,7 @@
                              class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/90 z-10"></div>
                         <div class="absolute bottom-8 left-8 z-20">
-                            <h3 class="text-2xl font-bold mb-2">Сайт для Образовательного учреждения</h3>
+                            <h3 class="text-2xl font-bold mb-2">Сайт для Образовательного учереждения</h3>
                             <p class="text-zinc-400 mb-4">Веб Разработка</p>
                             <a href="https://www.aktt.org/" class="inline-flex items-center space-x-2 text-[#ff6b6b] group-hover:text-white transition-colors duration-300">
                                 <span>Посмотреть кейс</span>
@@ -300,7 +300,7 @@
                              class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/90 z-10"></div>
                         <div class="absolute bottom-8 left-8 z-20">
-                            <h3 class="text-2xl font-bold mb-2">Лейдинг для хакатона "Игры будущего"</h3>
+                            <h3 class="text-2xl font-bold mb-2">Лендинг для хакатона "Игры будущего"</h3>
                             <p class="text-zinc-400 mb-4">Дизайн</p>
                             <a href="https://www.behance.net/gallery/195950777/igry-buduschego-dlja-Braim" class="inline-flex items-center space-x-2 text-[#ff6b6b] group-hover:text-white transition-colors duration-300">
                                 <span>Посмотреть кейс</span>
@@ -341,7 +341,7 @@
                         <div>
                             <h2 class="text-4xl font-bold mb-8">Немного статистики</h2>
                             <p class="text-zinc-400 mb-8">
-                                Меня зовут Артем и я начинающий фрилансер на первых ступеньках своего опыта после работы на реальных проектах (в офисах).
+                                Меня зовут Артем и я начинающий фрилансер, который сейчас на первых ступеньках своего опыта после работы на реальных проектах (в офисах).
                             </p>
                             <div class="grid grid-cols-2 gap-8">
                                 <div class="hover-lift">
@@ -468,6 +468,7 @@
 </div>
 </body>
 </html>
+
 
 
 
