--- a/index.html
+++ b/index.html
@@ -343,7 +343,10 @@
                             <p class="text-zinc-400 mb-8">
                                 Меня зовут Артем и я начинающий фрилансер, который сейчас на первых ступеньках своего опыта после работы на реальных проектах (в офисах).
                                 <br>
-                                <a href="https://github.com/SouthKartman/SouthKartman/blob/main/Resume/RU.png">Мое резюме ^-^</a>
+                                <a style="
+                                    text-decoration: underline;"
+                                    href="https://github.com/SouthKartman/SouthKartman/blob/main/Resume/RU.png">Мое резюме тут ^-^
+                                </a>
                             </p>
                             <div class="grid grid-cols-2 gap-8">
                                 <div class="hover-lift">
@@ -470,6 +473,7 @@
 </div>
 </body>
 </html>
+
 
 
 
